--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -549,7 +549,7 @@ img {
   width: 100%;
   height: 120px;
   text-indent: -2000px;
-  background: #ff5e52;
+  /* background: #ff5e52; */
 }
 
 .header .logo a {
@@ -564,7 +564,7 @@ img {
 
 .header .nav a {
   display: block;
-  padding: 12px 25px;
+  padding: 12px 15px;
   color: #666;
 }
 
@@ -1162,7 +1162,7 @@ img {
 }
 
 .aside .random li {
-  height: 60px;
+  height: 80px;
   padding: 10px 0;
 }
 
@@ -1204,7 +1204,7 @@ img {
 }
 
 .aside .discuz li {
-  height: 40px;
+  height: 60px;
   padding: 10px 0;
 }
 
@@ -1234,6 +1234,7 @@ img {
   padding-left: 50px;
   font-size: 12px;
   color: #999;
+
 }
 
 .aside .discuz .txt span {
